syntax = "proto3";

package jnoj.interface.v1.group;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "api/interface/v1;v1";

service GroupService {
    // 获取小组列表
    rpc ListGroups (ListGroupsRequest) returns (ListGroupsResponse) {
        option (google.api.http) = {
            get: "/groups"
        };
    }
    rpc GetGroup (GetGroupRequest) returns (Group) {
        option (google.api.http) = {
            get: "/groups/{id}"
        };
    }
    rpc CreateGroup (CreateGroupRequest) returns (Group) {
        option (google.api.http) = {
            post: "/groups"
            body: "*"
        };
    }
    rpc UpdateGroup (UpdateGroupRequest) returns (Group) {
        option (google.api.http) = {
            put: "/groups/{id}"
            body: "*"
        };
    }
    rpc DeleteGroup (DeleteGroupRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/groups/{id}"
        };
    }
    // 获取小组用户列表
    rpc ListGroupUsers (ListGroupUsersRequest) returns (ListGroupUsersResponse) {
        option (google.api.http) = {
            get: "/groups/{id}/users"
        };
    }
    rpc GetGroupUser (GetGroupUserRequest) returns (GroupUser) {
        option (google.api.http) = {
            get: "/groups/{gid}/users/{uid}"
        };
    }
    // 新增小组用户
    rpc CreateGroupUser (CreateGroupUserRequest) returns (GroupUser) {
        option (google.api.http) = {
            post: "/groups/{gid}/users"
            body: "*"
        };
    }
    // 修改小组用户
    rpc UpdateGroupUser (UpdateGroupUserRequest) returns (GroupUser) {
        option (google.api.http) = {
            put: "/groups/{gid}/users/{uid}"
            body: "*"
        };
    }
    // 移除小组用户
    rpc DeleteGroupUser (DeleteGroupUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/groups/{gid}/users/{uid}"
        };
    }
}

enum GroupType {
    GROUP = 0;
    TEAM = 1;
}

message Group {
    int32 id = 1;
    string name = 2;
    string description = 3;
    int32 member_count = 4;
    int32 privacy = 5;
    int32 membership = 6;
    string invitation_code = 7;
    int32 user_id = 8;
    string user_nickname = 9;
    string user_avatar = 10;
    GroupUserRole role = 11;
    GroupType type = 12;
    Group team = 13;
    google.protobuf.Timestamp created_at = 14;
}

message ListGroupsRequest {
    string name = 1;
    optional bool mygroup = 2;
    string sort = 3;
    optional int32 parent_id = 4;
    GroupType type = 5;
    int32 page = 6;
    int32 per_page = 7;
}

message ListGroupsResponse {
    repeated Group data = 1;
    int64 total = 2;
}

message GetGroupRequest {
    int32 id = 1;
}

message CreateGroupRequest {
    int32 parent_id = 1;
    string name = 2;
    string description = 3;
    GroupType type = 4;
}

message UpdateGroupRequest {
    int32 id = 1;
    string name = 2;
    int32 privacy = 3;
    int32 membership = 4;
    string invitation_code = 5 [(validate.rules).string = {max_len: 16}];
    string description = 6;
}

message DeleteGroupRequest {
    int32 id = 1;
}

enum GroupUserRole {
    ADMIN = 0;
    MANAGER = 1;
    MEMBER = 2;
    GUEST = 3;
}

message GroupUser {
    int32 id = 1;
    string nickname = 2;
    string user_avatar = 3;
    int32 user_id = 4;
    int32 group_id = 5;
    GroupUserRole role = 6;
    google.protobuf.Timestamp created_at = 7;
}

message ListGroupUsersRequest {
    int32 id = 1;
}

message ListGroupUsersResponse {
    repeated GroupUser data = 1;
    int64 total = 2;
}

message GetGroupUserRequest {
    int32 gid = 1;
    int32 uid = 2;
}

message DeleteGroupUserRequest {
    int32 gid = 1;
    int32 uid = 2;
}

message CreateGroupUserRequest {
    int32 gid = 1;
    string username = 2;
    string nickname = 3;
    string invitation_code = 4;
}

message UpdateGroupUserRequest {
    int32 gid = 1;
    int32 uid = 2;
    string nickname = 3;
    GroupUserRole role = 4;
}
